working simple sample

--- a/GVRf/Framework/framework/build.gradle
+++ b/GVRf/Framework/framework/build.gradle
@@ -108,6 +108,10 @@ android {
     sourceSets.main {
         java.srcDirs = ['src/main/java']
         resources.srcDir 'src/main/libs'
+
+        jniLibs {
+            srcDir "/home/sushant.o/Android/Sdk/ndk-bundle/sources/third_party/vulkan/src/build-android/jniLibs"
+        }
     }
 }
 
